tests/rosetta/out/C/averages-pythagorean-means.error
cc: exit status 1
/tmp/averages-pythagorean-means.c:21:8: warning: conflicting types for built-in function ‘powf’; expected ‘float(float,  float)’ [-Wbuiltin-declaration-mismatch]
   21 | double powf(double base, int exp) {
      |        ^~~~
/tmp/averages-pythagorean-means.c:6:1: note: ‘powf’ is declared in header ‘<math.h>’
    5 | #include <string.h>
  +++ |+#include <math.h>
    6 | 
/tmp/averages-pythagorean-means.c:77:5: error: redefinition of ‘main’
   77 | int main() {
      |     ^~~~
/tmp/averages-pythagorean-means.c:47:5: note: previous definition of ‘main’ with type ‘int()’
   47 | int main() {
      |     ^~~~
